[workspace]

[package]
name = "rusteron-replay-reproduction"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rusteron-archive = { version = "0.1", features = ["static", "precompile", "extra-logging", "backtrace"] }
rusteron-client = { version = "0.1", features = ["static", "precompile", "extra-logging", "backtrace"] }

[[bin]]
name = "external_replay"

[[bin]]
name = "embedded_replay"